--- a/index.html
+++ b/index.html
@@ -9,5 +9,9 @@
 <body>
 
     <h1>Hello Git</h1>
+    <h1>Hello Git</h1>
+    <h1>Hello Git</h1>
+    <h1>Hello Git</h1>
+    <h1>Hello Git</h1>
 </body>
 </html>
